# Flash-Q-Bot

./: .breakpoints  .gitignore  Diccionarios.py  README.md  Variables.py  diccionarios.py  dios.py  keep_alive.py  main.py  pyproject.toml
pruebas/: pruebas.py  pruebas2.py
