[tool.poetry]
name = "repl_python3_Python-Bot"
version = "0.1.0"
description = ""
authors = ["AContiSG <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
nextcord = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
